--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,15 @@
 {
     "name": "oranfry/jars-client",
     "version": "1.0.0",
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/oranfry/jars-contracts.git"
+        }
+    ],
+    "require": {
+        "oranfry/jars-contracts": "*"
+    },
     "autoload": {
         "psr-4": {
             "": "src/php/class",
